--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tabler/icons-react": "^3.34.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,11 +31,13 @@
     "immer": "^10.1.1",
     "jdenticon": "^3.3.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next": "15.4.3",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^3.1.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
@@ -54,6 +58,7 @@
     "typescript": "^5"
   },
   "overrides": {
-    "react-is": "^19.0.0-rc-69d4b800-20241021"
+    "react-is": "^19.0.0-rc-69d4b800-20241021",
+    "react-syntax-highlighter": "15.0.0"
   }
 }
