--- a/package.json
+++ b/package.json
@@ -60,5 +60,6 @@
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021",
     "react-syntax-highlighter": "15.0.0"
-  }
+  },
+  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
 }
