--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@demox-labs/miden-sdk": "0.12.3",
+    "@demox-labs/miden-sdk": "0.12.5",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -32,7 +32,7 @@
     "jdenticon": "^3.3.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
-    "next": "15.4.3",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
